DistributionTablePotential: changed signature of sampleConditionedVariable by adding throw OpenMarkovException; changed way random numbers are treated